--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.6.2",
     "jquery": "^3.6.0",
+    "mdbreact": "^5.2.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
