--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animejs": "^3.2.1",
     "chart.js": "^3.6.2",
     "jquery": "^3.6.0",
     "mdbreact": "^5.2.0",
@@ -15,6 +16,7 @@
     "react-anime": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-waypoint": "^10.1.0",
     "typeit-react": "^2.0.8",
     "web-vitals": "^1.1.2"
   },
