--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-anime": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-waypoint": "^10.1.0",
     "typeit-react": "^2.0.8",
     "web-vitals": "^1.1.2"
