--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^12.8.3",
     "animejs": "^3.2.1",
     "chart.js": "^3.6.2",
+    "immer": "^9.0.7",
     "jquery": "^3.6.0",
     "mdbreact": "^5.2.0",
+    "node-fetch": "^3.1.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
