--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animejs": "^3.2.1",
+    "ansi-html": "^0.0.7",
     "chart.js": "^3.6.2",
     "immer": "^9.0.7",
     "jquery": "^3.6.0",
