--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
       "react-app",
       "react-app/jest"
     ]
+  },"engines": {
+    "node": "18.9.0"
   },
   "browserslist": {
     "production": [
