--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animejs": "^3.2.1",
-    "ansi-html": "^0.0.7",
+    "ansi-html": "^0.0.9",
     "chart.js": "^3.6.2",
     "immer": "^9.0.7",
     "jquery": "^3.6.0",
-    "mdbreact": "^5.2.0",
+    "mdbreact": "^4.26.0",
     "node-fetch": "^3.1.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.4",
     "react-waypoint": "^10.1.0",
     "typeit-react": "^2.0.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,7 +35,8 @@
       "react-app",
       "react-app/jest"
     ]
-  },"engines": {
+  },
+  "engines": {
     "node": "18.9.0"
   },
   "browserslist": {
